# FH06_Embedded_Branch

./: .gitignore  Andres_downstairs.csv  Andres_jump.csv  Andres_running.csv  Andres_sitting.csv  Andres_upstairs.csv  CMakeLists.txt  NK Upstairs 1min.csv  NK runninglmao 1min.csv  NK sitting 1min.csv  README.md  ble_dashboard.html  build.sh  classifier_3x25x1_1dcnn_int8.tflite  classifier_labels.json  example.py  jlink.sh  main 2.c  nrf52dk_nrf52832.overlay  prj.conf  prj_energy_profile.conf  prj_solar.conf  run_website.sh  sample.yaml  weekly_report.md
ML/: classifier_3x25x1_1dcnn_int8.tflite  classifier_labels.json  model.py
ML/Data/: Andres_idle.csv  Andres_walking.csv  Matthew_idle.csv  Matthew_jump.csv  Matthew_sixseven.csv  Matthew_spinning.csv  Matthew_walking.csv  Matthew_waving.csv  Nikhil_standing.csv  Nikhil_walking.csv  Ronak_idle.csv  Ronak_jump.csv  Ronak_sixseven.csv  Ronak_walking.csv  Ronak_waving.csv
boards/: nrf52dk_nrf52832.overlay
build_solar/: .ninja_deps  .ninja_log  CMakeCache.txt  build_info.yml  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
build_solar/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig  Kconfig.sysbuild.modules
build_solar/ei-v3/: cmake_install.cmake
desktop-app/: README.md  main.js  package-lock.json  package.json  preload.js
ei-v2/: README.txt
ei-v4/: README.txt
include/: glueV2.h  glueV3.h  run_nn.h
src/: Untitled  ei_glue_v2.cpp  ei_glue_v3.cpp  ei_glue_v4.cpp  main.c  main.c.bak  main2.c  main3.c  run_nn.c
(+2212 files in other folders)
